--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
         GOPATH: /home/runner/work/boson/go
 
     - name: Check
-      run: make check
+      run: make ci-check
       env:
         GOPATH: /home/runner/work/boson/go
 
