--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,6 +21,10 @@ builds:
       - amd64
       - arm
       - arm64
+    goarm:
+      - 5
+      - 6
+      - 7
 
 checksum:
   name_template: 'checksums.txt'
